[package]
name = "colmac"
version = "0.1.0"
authors = ["Jack <jchoi5@me.com>"]
edition = "2018"
description = "Macros to work with `std::collections`"
repository = "https://github.com/jchoi5me/colmac"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
